# Fermat-Prime-Checker-Rust

./: .gitignore  Cargo.toml  prototype.py
src/: arithmetic.rs  block_iterator.rs  main.rs
